# inox

./: .gitignore  CLL.hs  Compiling.org  Core.cf  FocPol.hs  Focusing.hs  Inox.hs  Inox.org  LLVM.hs  Main.hs  Makefile  ParseCore.hs  Recursion.org  cf.h  inox.cabal  notes.org  shell.nix  stack.yaml
Bnf/: Core.cf  README.org
C/: Common.hs  Deep.hs  Flat.hs
