name:           inox
version:        1.0.0.0
category:       Programming
synopsis:       A language with linear types
description:
  Soon to appear.
license:        GPL
author:         Jean-Philippe Bernardy and Arnaud Spiwack
maintainer:     jeanphilippe.bernardy@gmail.com
Cabal-Version:  >= 1.12
tested-with:    GHC==7.10.3
build-type:     Simple

executable inox
  default-language: Haskell2010
  build-depends: base>=4
  build-depends: pretty-compact
  build-depends: containers
  build-depends: mtl
  build-depends: transformers
  
  main-is: Main.hs

